# recipe_repo

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml
app/: db.py  main.py
app/api/: htmx.py  inventory.py  pages.py  recipes.py  scan.py
app/models/: inventory.py  recipes.py
app/services/: recipe_suggester.py  spoonacular_client.py  upc_lookup.py
app/static/: scan.js
app/templates/: base.html  grocery.html  inventory.html  recipes.html  scan.html
app/templates/partials/: grocery_item.html  ingredient_item.html  recipe_results.html
docs/: PRD.md
tests/: test_recipe_grouping.py
